--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
     <string name="invalid_url">A URL inserida parece ser inválida por favor tente novamente com uma nova URL.</string>
     <string name="empty_url">Você precisa preencher o campo com uma URL.</string>
     <string name="empty_rss">A url retornou uma resposta vazia.</string>
+    <string name="parse_error">Houve um problema ao analisar o podcast.</string>
+    <string name="parse_null">Houve um problema ao carregar o podcast.</string>
     <string name="response_error">Houve um problema na resposta do servidor, tente mais tarde.</string>
     <string name="connection_failure">Houve um problema na requisção, verifique sua conexão com a internet.</string>
+
+
 
 </resources>
