style: melhoria no tamanho da imagme e duração da abertura

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,46 +2,46 @@
     <string name="app_name">PodWave</string>
 
     <!--Tratativas e Erros-->
-    <string name="invalid_url">A URL inserida parece ser inválida por favor tente novamente com uma nova URL.</string>
-    <string name="empty_url">Você precisa preencher o campo com uma URL.</string>
-    <string name="empty_rss">A url retornou uma resposta vazia.</string>
-    <string name="parse_error">Houve um problema ao analisar o podcast.</string>
-    <string name="parse_null">Houve um problema ao carregar o podcast.</string>
-    <string name="response_error">Houve um problema na resposta do servidor, tente mais tarde.</string>
-    <string name="connection_failure">Houve um problema na requisção, verifique sua conexão com a internet.</string>
+    <string name="invalid_url">A URL inserida parece ser inválida por favor tente novamente com uma nova URL</string>
+    <string name="empty_url">Você precisa preencher o campo com uma URL</string>
+    <string name="empty_rss">A url retornou uma resposta vazia</string>
+    <string name="parse_error">Houve um problema ao analisar o podcast</string>
+    <string name="parse_null">Houve um problema ao carregar o podcast</string>
+    <string name="response_error">Houve um problema na resposta do servidor, tente mais tarde</string>
+    <string name="connection_failure">Houve um problema na requisção, verifique sua conexão com a internet</string>
 
     <!--Strings Main Activity Layout-->
-    <string name="clear_history"><u>limpar histórico</u>.</string>
-    <string name="edit_text_url"><u>Insira a URL RSS</u>.</string>
-    <string name="text_tittle"><u>Podwave</u>.</string>
-    <string name="text_description"><u>Toda conversa merece ser ouvida</u>.</string>
-    <string name="urlButton_layout_text"><u>Carregar Podcast</u>.</string>
+    <string name="clear_history"><u>limpar histórico</u></string>
+    <string name="edit_text_url">Insira a URL RSS</string>
+    <string name="text_tittle">Podwave</string>
+    <string name="text_description">Toda conversa merece ser ouvida</string>
+    <string name="urlButton_layout_text">Carregar Podcast</string>
 
     <!--Strings Main Activity Class-->
-    <string name="dialog_tittle_fetcher"><u>Atenção Podwaver</u>.</string>
-    <string name="dialog_tittle_cache"><u>Atenção Podwaver</u>.</string>
-    <string name="dialog_description_chace"><u>Deseja limpar o cache do aplicativo?</u>.</string>
-    <string name="dialog_button_1_fetcher"><u>fechar</u>.</string>
-    <string name="dialog_button_1_chace"><u>Sim</u>.</string>
-    <string name="dialog_button_2_chace"><u>Não</u>.</string>
-    <string name="rectifyUrl_http"><u>http://</u>.</string>
-    <string name="rectifyUrl_https"><u>https://</u>.</string>
+    <string name="dialog_tittle_fetcher">Atenção Podwaver</string>
+    <string name="dialog_tittle_cache">Atenção Podwaver</string>
+    <string name="dialog_description_chace">Deseja limpar o cache do aplicativo?</string>
+    <string name="dialog_button_1_fetcher">fechar.</string>
+    <string name="dialog_button_1_chace">Sim</string>
+    <string name="dialog_button_2_chace">Não</string>
+    <string name="invalid_url_text"><u>A url inserida é invalida</u></string>
+    <string name="empty_url_text"><u> Preencha o campo da url</u></string>
 
     <!--Strings Podcast Activity Layout-->
-    <string name="podcast_tittle"><u>Título do Podcast</u>.</string>
-    <string name="podcast_categoria"><u>Categoria do Podcast</u>.</string>
-    <string name="podcast_autor"><u>Autor do Podcast</u>.</string>
-    <string name="podcast_episode_size"><u>Episódios: 0</u>.</string>
-    <string name="podcast_description"><u>Descrição do Podcast</u>.</string>
+    <string name="podcast_tittle">Título do Podcast</string>
+    <string name="podcast_categoria">Categoria do Podcast</string>
+    <string name="podcast_autor">Autor do Podcast</string>
+    <string name="podcast_episode_size">Episódios: 0</string>
+    <string name="podcast_description">Descrição do Podcast</string>
     <string name="episode_image_description">Imagem do episódio</string>
 
     <!--Strings Podcast Activity Class-->
-    <string name="podcast_categoria_class"><u>Categoria desconhecida</u>.</string>
-    <string name="podcast_autor_class"><u>Autor desconhecido</u>.</string>
+    <string name="podcast_categoria_class">Categoria desconhecida</string>
+    <string name="podcast_autor_class">Autor desconhecido</string>
 
     <!--Episode item Layout-->
-    <string name="episode_tittle"><u>Título do Episódio</u>.</string>
-    <string name="episode_date"><u>Data de Publicação</u>.</string>
+    <string name="episode_tittle">Título do Episódio</string>
+    <string name="episode_date">Data de Publicação</string>
 
 
     <!--Strings Player Fragment Layout-->
